- added basic config

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -7,18 +7,28 @@ org.elmarweber.github.akkakafkaexample.eventgateway {
   }
 }
 
-
 org.elmarweber.github.akkakafkaexample.mobileclient {
   gateway.endpoint = "http://localhost:9090"
 }
+
+org.elmarweber.github.akkakafkaexample.enrichment {
+  kafka {
+    bootstrap-servers: "localhost:9092"
+    client-id: "statistics"
+    group-id: "stats-stream"
+    source-topic: "events.input"
+    target-topic: "events.enriched"
+  }
+}
+
 
 org.elmarweber.github.akkakafkaexample.statistics {
   kafka {
     bootstrap-servers: "localhost:9092"
     client-id: "statistics"
     group-id: "stats-stream"
-    source-topic: "events.input"
-    target-topic: "song.counts"
+    source-topic: "events.enriched"
+    target-topic: "artist.stats"
   }
 }
 
