--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -21,7 +21,6 @@ org.elmarweber.github.akkakafkaexample.enrichment {
   }
 }
 
-
 org.elmarweber.github.akkakafkaexample.statistics {
   kafka {
     bootstrap-servers: "localhost:9092"
@@ -33,6 +32,9 @@ org.elmarweber.github.akkakafkaexample.statistics {
 }
 
 
+
+
+# ignore this
 
 kamon {
   weaver {
@@ -49,7 +51,7 @@ kamon {
   }
 
   metric {
-    tick-interval = 10 seconds
+    tick-interval = 1 second
     filters {
       akka-actor {
         includes = ["**"]
@@ -76,7 +78,7 @@ kamon {
 
     # Interval between metrics data flushes to Datadog. It's value must be equal or greater than the
     # kamon.metrics.tick-interval setting.
-    flush-interval = 10 seconds
+    flush-interval = 1 second
 
     # Max packet size for UDP metrics data sent to Datadog.
     max-packet-size = 1024 bytes
